--- a/index.html
+++ b/index.html
@@ -62,17 +62,17 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://wer53077.github.io/pomodoro-test" />
+  <meta property="og:url" content="https://wer53077.github.io/pomodoro" />
   <meta property="og:title" content="番茄鐘" />
   <meta property="og:description" content="Vuetify 番茄鐘" />
-  <meta property="og:image" content="https://wer53077.github.io/pomodoro-test" />
+  <meta property="og:image" content="https://wer53077.github.io/pomodoro" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://wer53077.github.io/pomodoro-test/splashscreens/ipad_splash.png" />
+  <meta property="twitter:url" content="https://wer53077.github.io/pomodoro/splashscreens/ipad_splash.png" />
   <meta property="twitter:title" content="番茄鐘" />
   <meta property="twitter:description" content="Vuetify 番茄鐘" />
-  <meta property="twitter:image" content="https://wer53077.github.io/pomodoro-test/splashscreens/ipad_splash.png" />
+  <meta property="twitter:image" content="https://wer53077.github.io/pomodoro/splashscreens/ipad_splash.png" />
 
   <!-- Meta Tags Generated with https://metatags.io -->
 </head>
